# rustarium

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  parsing.rs  socket.rs  util.rs
