[package]
name = "rustarium"
version = "0.1.3"
authors = ["tdoylend <tmdoylend@gmail.com>"]
description = "A tiny UDP message-passing framework."
documentation = "https://docs.rs/rustarium"
repository = "https://www.github.com/doylendsoftware/rustarium"
license = "MIT"
readme="README.md"

[dependencies]
local-ip="0.1"
